# advent2024

./: LICENSE  advent2024.cabal
app/: Main.hs
input/: day_two_t.txt
src/: Day1.hs  FileRead.hs  Public.hs
