cabal-version:   3.0
name:            advent2024
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
maintainer:      brad.hermens@gmail.com
author:          Brad Hermens
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:  Day1
    hs-source-dirs:   src
    other-modules:
        Paths_advent2024
        FileRead

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.17.2.1,
        containers

executable advent2024
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.17.2.1,
        advent2024

test-suite advent2024-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.17.2.1,
        advent2024
